<resources>
    <string name="app_name">Artless</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="join">Join</string>
    <string name="join_code_hint">Enter join code</string>
    <string name="guess_text">Type your guess here</string>
    <string name="submit">Submit</string>
    <string name="confirm">confirm</string>
    <string name="cancel">cancel</string>
    <string name="reset">Reset</string>
    <string name="color">Color</string>
</resources>