<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.game.DrawingActivity">

    <TextView
        android:id="@+id/titleView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/aloja"
        android:shadowColor="@color/colorBorder"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="1"
        android:text="Draw: "
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.WMS1.drawful.views.CanvasView
        android:id="@+id/canvas"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:background="@android:color/white"
        app:layout_constraintDimensionRatio="h,4:3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleView" />

    <SeekBar
        android:id="@+id/strokeSize"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:max="48"
        android:min="8"
        android:progress="8"
        android:progressTint="@color/colorPrimary"
        android:thumbTint="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/canvas" />

    <TextView
        android:id="@+id/smallStroke"
        android:layout_width="12sp"
        android:layout_height="12sp"
        android:layout_alignStart="@+id/strokeSize"
        android:layout_alignTop="@id/strokeSize"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"

        android:layout_marginBottom="8dp"
        android:background="@drawable/ic_stroke"
        android:elevation="100dp"
        app:layout_constraintBottom_toTopOf="@+id/strokeSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/canvas" />

    <TextView
        android:id="@+id/bigStroke"
        android:layout_width="24sp"
        android:layout_height="24dp"
        android:layout_alignStart="@+id/strokeSize"
        android:layout_alignTop="@id/strokeSize"

        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/ic_stroke"
        android:elevation="100dp"
        app:layout_constraintBottom_toTopOf="@+id/strokeSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/canvas" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:onClick="submitDrawing"
        android:text="@string/submit"
        android:theme="@style/ButtonTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="24dp"
        android:onClick="resetDrawing"
        android:text="@string/reset"
        android:theme="@style/ButtonTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/colorPickerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:onClick="showColorPicker"
        android:text="@string/color"
        android:theme="@style/ButtonTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/submitButton"
        app:layout_constraintStart_toEndOf="@+id/resetButton" />


</androidx.constraintlayout.widget.ConstraintLayout>